--- a/detailAksi.html
+++ b/detailAksi.html
@@ -35,7 +35,7 @@
       class="navbar bg-white navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
     >
       <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
             id="logo"
