--- a/aksi.html
+++ b/aksi.html
@@ -34,7 +34,7 @@
       class="navbar bg-white navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
             id="logo"
