--- a/article.html
+++ b/article.html
@@ -27,7 +27,7 @@
       class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
             id="logo"
