--- a/searchPage.html
+++ b/searchPage.html
@@ -25,7 +25,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white shadow shadow-sm sticky-top">
       <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
             id="logo"
