--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
                 ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item m-1">
               <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
                 >Donasi</a
               >
             </li>
-            <div id="button-login">
-              <li class="nav-item ms-2" id="button-login">
-                <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+            
+              <li class="nav-item " >
+                <div id="button-login">
+                <a class="btnDonasi m-1 btn nav-link active ps-3 pe-3" href="login.html"
                   >login</a>
+                </div>
               </li>
-            </div>
+          
           </ul>
         </div>
       </div>
