--- a/index.html
+++ b/index.html
@@ -257,5 +257,6 @@
 
     <!-- Script JS -->
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/isLogin.js"></script>
   </body>
 </html>
