--- a/detailArticle.html
+++ b/detailArticle.html
@@ -24,7 +24,7 @@
   <body>
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
+      class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow sticky-top bg-white"
     >
       <div class="container">
         <a class="navbar-brand" href="./index.html"
@@ -51,7 +51,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
@@ -66,10 +66,20 @@
                 ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item m-1">
               <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
                 >Donasi</a
               >
+            </li>
+
+            <li class="nav-item">
+              <div id="button-login">
+                <a
+                  class="btnDonasi m-1 btn nav-link active ps-3 pe-3"
+                  href="login.html"
+                  >login</a
+                >
+              </div>
             </li>
           </ul>
         </div>
@@ -309,5 +319,6 @@
 
     <!-- Script JS -->
     <script src="assets/js/detailArticle.js"></script>
+    <script src="./assets/js/isLogin.js"></script>
   </body>
 </html>
