--- a/login.html
+++ b/login.html
@@ -23,54 +23,58 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#"
-          ><img
-            src="./assets/images/logo.png"
-            id="logo"
-            alt="Environthink Logo"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav
+    class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
+  >
+    <div class="container">
+      <a class="navbar-brand" href="./index.html"
+        ><img
+          src="./assets/images/logo.png"
+          id="logo"
+          alt="Environthink Logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div
-          class="justify-content-end collapse navbar-collapse"
-          id="navbarNavDropdown"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Aksi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Artikel</a>
-            </li>
-            <li class="nav-item mt-1 mb-2 ms-3 me-4">
-              <a class="" href="#"
-                ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
-                >Donasi</a
-              >
-            </li>
-          </ul>
-        </div>
+      <div
+        class="justify-content-end collapse navbar-collapse"
+        id="navbarNavDropdown"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="aksi.html">Aksi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="article.html">Artikel</a>
+          </li>
+          <li class="nav-item mt-1 mb-2 ms-3 me-4">
+            <a class="" href="./searchPage.html"
+              ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+              >Donasi</a
+            >
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
     <div class="container">
       <h1>Login</h1>
@@ -155,6 +159,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/login.js.js"></script>
+    <script src="./assets/js/login.js"></script>
   </body>
 </html>
