--- a/searchPage.html
+++ b/searchPage.html
@@ -23,8 +23,10 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-white shadow shadow-sm sticky-top">
-      <div class="container d-flex justify-content-between">
+    <nav
+      class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow sticky-top bg-white"
+    >
+      <div class="container">
         <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
@@ -54,21 +56,29 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./aksi.html">Aksi</a>
+              <a class="nav-link active" href="aksi.html">Aksi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./article.html">Artikel</a>
+              <a class="nav-link active" href="article.html">Artikel</a>
             </li>
             <li class="nav-item mt-1 mb-2 ms-3 me-4">
               <a class="" href="./searchPage.html"
                 ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item m-1">
               <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
                 >Donasi</a
               >
             </li>
+            
+              <li class="nav-item " >
+                <div id="button-login">
+                <a class="btnDonasi m-1 btn nav-link active ps-3 pe-3" href="login.html"
+                  >login</a>
+                </div>
+              </li>
+          
           </ul>
         </div>
       </div>
@@ -214,5 +224,6 @@
 
     <!-- Script JS -->
     <script src="./assets/js/search.js"></script>
+    <script src="./assets/js/isLogin.js"></script>
   </body>
 </html>
