--- a/login.html
+++ b/login.html
@@ -23,60 +23,60 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav
-    class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
-  >
-    <div class="container">
-      <a class="navbar-brand" href="./index.html"
-        ><img
-          src="./assets/images/logo.png"
-          id="logo"
-          alt="Environthink Logo"
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <nav
+      class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="./index.html"
+          ><img
+            src="./assets/images/logo.png"
+            id="logo"
+            alt="Environthink Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div
-        class="justify-content-end collapse navbar-collapse"
-        id="navbarNavDropdown"
-      >
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="aksi.html">Aksi</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="article.html">Artikel</a>
-          </li>
-          <li class="nav-item mt-1 mb-2 ms-3 me-4">
-            <a class="" href="./searchPage.html"
-              ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
-              >Donasi</a
-            >
-          </li>
-        </ul>
+        <div
+          class="justify-content-end collapse navbar-collapse"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="aksi.html">Aksi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="article.html">Artikel</a>
+            </li>
+            <li class="nav-item mt-1 mb-2 ms-3 me-4">
+              <a class="" href="./searchPage.html"
+                ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+                >Donasi</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-    <div class="container">
+    <!-- <div class="container" style="margin-top: 100px;">
       <h1>Login</h1>
       <form id="login-form">
         <div class="form-group">
@@ -89,7 +89,46 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
-    </div>
+    </div> -->
+
+    <div class="container " style="margin-top: 80px;">
+
+      <!-- Outer Row -->
+      <div class="row justify-content-center">
+
+          <div class="col-xl-10 col-lg-12 col-md-9">
+
+              <div class="card o-hidden border-0 shadow-lg my-5">
+                  <div class="card-body p-0">
+                      <!-- Nested Row within Card Body -->
+                      <div class="row">
+                         
+                          <div class="col-lg-6">
+                              <div class="p-5">
+                                <h1>Login</h1>
+                                <form id="login-form">
+                                  <div class="form-group">
+                                    <label for="username">Username:</label>
+                                    <input type="text" id="username" name="username" class="form-control" required>
+                                  </div>
+                                  <div class="form-group mb-3">
+                                    <label for="password">Password:</label>
+                                    <input type="password" id="password" name="password" class="form-control" required>
+                                  </div>
+                                  <button type="submit " class="btn btn-primary d-block">Login</button>
+                                </form>
+                              </div>
+                          </div>
+                          <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+
+      </div>
+
+  </div>
 
     <!-- Footer -->
     <footer id="footer">
