--- a/login.html
+++ b/login.html
@@ -21,6 +21,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
   </head>
+  <style>
+    .bg-login-image{
+      background-image: url("https://i.ibb.co/JF5bNSW/image-23.png");
+    }
+  
+  </style>
   <body>
     <!-- Navbar -->
       <nav
