modified navbar & article

--- a/searchPage.html
+++ b/searchPage.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-white shadow shadow-sm sticky-top">
+    <nav class="navbar navbar-expand-lg bg-white shadow sticky-top">
       <div class="container d-flex justify-content-between">
         <a class="navbar-brand" href="./index.html"
           ><img
