--- a/aksi.html
+++ b/aksi.html
@@ -99,9 +99,7 @@
       <div class="row" id="aksi-list"></div>
 
       <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success" id="btn-aksi-lainnya">
-          Aksi Lainnya
-        </button>
+        <button class="btn" id="btn-aksi-lainnya">Aksi Lainnya</button>
       </div>
     </div>
 
