--- a/article.html
+++ b/article.html
@@ -83,9 +83,7 @@
         <div class="row pt-4" id="articlesContent"></div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success" id="artikel-lainnya">
-          Artikel Lainnya
-        </button>
+        <button class="btn" id="artikel-lainnya">Artikel Lainnya</button>
       </div>
     </div>
 
@@ -96,9 +94,7 @@
         <div class="row pt-4" id="infografisContent"></div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success" id="infografis-lainnya">
-          Infografis Lainnya
-        </button>
+        <button class="btn" id="infografis-lainnya">Infografis Lainnya</button>
       </div>
     </div>
 
