--- a/detailArticle.html
+++ b/detailArticle.html
@@ -247,7 +247,37 @@
         </div>
       </div>
     </div>
-
+<!-- modal error  -->
+<div
+class="modal fade"
+id="modal-error"
+data-bs-backdrop="static"
+data-bs-keyboard="false"
+tabindex="-1"
+aria-labelledby="staticBackdropLabel"
+aria-hidden="true"
+>
+<div class="modal-dialog modal-dialog-centered">
+  <div class="modal-content">
+    <div class="modal-body">
+      <center>
+        <img
+          src="https://i.ibb.co/zJW1452/6276642.png"
+          class="m-2"
+          width="100px"
+          alt=""
+          srcset=""
+        />
+      
+      <h4 class="text-center" id="heading-error"> !</h4>
+      <p class="text-secondary" id="pesan-error">
+        silahkan gunakan email yang lain untuk menandatangai petisi ini
+      </p>
+    </center>
+    </div>
+  </div>
+</div>
+</div>
     <!-- Footer -->
     <footer id="footer">
       <div class="container">
