addded page donasi and modified navbar

--- a/aksi.html
+++ b/aksi.html
@@ -74,7 +74,7 @@
               ></a>
             </li>
             <li class="nav-item m-1">
-              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="donasi.html"
                 >Donasi</a
               >
             </li>
