--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
               ></a>
             </li>
             <li class="nav-item">
-              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="donasi.html"
                 >Donasi</a
               >
             </li>
