--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
-    />
+    /> 
     <!-- Link Icon Bootstrap -->
     <link
       rel="stylesheet"
@@ -82,20 +82,7 @@
       </div>
     </nav>
 
-    <!-- <div class="container" style="margin-top: 100px;">
-      <h1>Login</h1>
-      <form id="login-form">
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <input type="text" id="username" name="username" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-    </div> -->
+
 
     <div class="container " style="margin-top: 80px;">
 
@@ -111,19 +98,31 @@
                          
                           <div class="col-lg-6">
                               <div class="p-5">
-                                <h1>Silahkan Masuk</h1>
-                                <p class="text-secondary">Belum Punya Akun <a href="register.html">register</a></p>
-                                <form id="login-form">
+                                <h1>Daftarkan Akun</h1>
+                                <form id="register-form">
                                   <div class="form-group">
                                     <label for="username">Username:</label>
                                     <input type="text" id="username" name="username" class="form-control" required>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="email">Emaill:</label>
+                                    <input type="email" id="email" name="email" class="form-control" required>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="kota">Kota:</label>
+                                    <input type="text" id="kota" name="kota" class="form-control" required>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="telepon">telepon:</label>
+                                    <input type="text" id="telepon" name="telepon" class="form-control" required>
                                   </div>
                                   <div class="form-group mb-3">
                                     <label for="password">Password:</label>
                                     <input type="password" id="password" name="password" class="form-control" required>
                                   </div>
-                                  <button type="submit " class="btn btn-primary d-block">Login</button>
+                                  <button type="submit " class="btn btn-primary d-block">Register</button>
                                 </form>
+                                
                               </div>
                           </div>
                           <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
@@ -205,6 +204,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/register.js"></script>
   </body>
 </html>
