fixed artikel page

--- a/detailArticle.html
+++ b/detailArticle.html
@@ -87,7 +87,7 @@
     </nav>
 
     <!-- Konten -->
-    <div id="articlesContent" class="container pt-5">
+    <div id="articlesContent" class="container">
       <div class="row ms-1 me-1 mt-5">
         <div class="col-md 12 mb-3">
           <p class="hashTag m-0 p-0">
@@ -104,7 +104,7 @@
         <div class="col-md-12 p-0 me-4 text-center">
           <img class="articlesImage img-fluid" src="" alt="" id="images" />
         </div>
-        <div class="col-md-12 ps-0 pe-0 pt-5">
+        <div class="paragraf col-md-12 ps-0 pe-0 pt-5">
           <p id="paragraf1" class="text-dark"></p>
           <p id="paragraf2" class="text-dark"></p>
           <p id="paragraf3" class="text-dark"></p>
