--- a/article.html
+++ b/article.html
@@ -84,7 +84,7 @@
       </div>
     </nav>
 
-    <div class="container p-5">
+    <div class="container">
       <div class="artikel" id="artikel">
         <h3 class="text-start mb-3">Artikel</h3>
         <div style="border: 0.5px solid #bfbfbf"></div>
