fixed aksi page

--- a/detailAksi.html
+++ b/detailAksi.html
@@ -92,7 +92,7 @@
     </div>
   </nav>
 
-    <div class="container" style="margin-top: 100px">
+    <div class="container pt-5 detail-aksi">
       <div class="row">
         <div class="col-md-8">
           <div id="aksi">
@@ -106,7 +106,7 @@
               aria-label="breadcrumb"
             >
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Aksi</a></li>
+                <li class="breadcrumb-item"><a href="aksi.html">Aksi</a></li>
                 <li class="breadcrumb-item active" aria-current="page">
                   tanda tangani Petisi
                 </li>
@@ -114,15 +114,17 @@
             </nav>
             <h3 id="title"></h3>
             <img
-              class="img-fluid"
+              class="img-fluid pt-3"
               width="100%"
               src=""
               alt="image content"
               id="image"
             />
-            <p class="mb-4" id="paragraf1"></p>
-            <p id="paragraf2"></p>
-            <p id="paragraf-konklusi" class="fw-bold"></p>
+            <div class="paragraf pt-4">
+              <p class="mb-4" id="paragraf1"></p>
+              <p id="paragraf2"></p>
+              <p id="paragraf-konklusi" class="fw-bold"></p>
+            </div>
           </div>
         </div>
         <div class="col-md-4 pt-5">
