--- a/aksi.html
+++ b/aksi.html
@@ -91,7 +91,7 @@
       </div>
     </nav>
 
-    <div class="container pt-5" style="margin-top: 50px">
+    <div class="container" style="margin-top: 50px">
       <div
         id="aksi"
         class="d-flex flex-column justify-content-center p-3 align-items-center"
@@ -101,9 +101,9 @@
           Ayo Bergabung dan Beraksi untuk Masa Depan Bumi yang Lebih Baik!
         </p>
       </div>
-      <hr />
+      <div style="border: 0.5px solid #bfbfbf"></div>
     </div>
-    <div class="container">
+    <div class="container pt-4">
       <div class="row" id="aksi-list"></div>
 
       <div class="d-flex justify-content-center">
